--- a/src/scss/includes/card-size.scss
+++ b/src/scss/includes/card-size.scss
@@ -2,12 +2,11 @@
 @mixin card-size($cardWidth) {
 
     .wc-card {
-        // border: $card_borderWidth solid #d2dde5;
+        border: $card_borderWidth solid transparent;
         width: $cardWidth - 2 * ($card_padding + $card_borderWidth);
     }
 
     .wc-adaptive-card {
-        width: $cardWidth - 2 * $card_borderWidth;
+        width: $cardWidth - $card_padding - 4 * $card_borderWidth;
     }
-    
 }
